SERVER-13463: Option Validation for NT Services

The current working directory for NT Services differs between installation time
and execution time. This leads to subtle user bugs where the service can fail to
start because directories do not exist. In the worst situation, the log file
directory may not exist which makes the debugging near impossible.